# venv-manager

./: .gitignore  Cargo.toml  README.md  build.sh  govenv  install.sh  run.sh  todo.md
.github/workflows/: go.yml  rust.yml
go_src/: go.mod  main.go  util.go
go_src/scripts/: build-bins.sh  deploy.sh
rust_src/: Cargo.toml  build.sh  run.sh
rust_src/src/: interactive.rs  lib.rs  main.rs
rusty/: Cargo.toml  build.sh  run.sh
rusty/src/: interactive.rs  lib.rs  main.rs
scripts/: build-bins.sh  deploy.sh  deploy_rs.sh  install.sh  install_go.sh  install_rs.sh
src/: Cargo.toml  activate  build.sh  go.mod  go.sum  govenv  interactive.rs  interactiveMode.go  lib.rs  main.go  main.rs  run.sh  util.go
src/gocliselect/: cli.go
src/src/: lib.rs  main.rs
