[package]
name = "venv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
clap_complete_command = "0.5.1"
colored = "2.0.0"
crossterm = "0.26.1"
home = "0.5.5"

